--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
@@ -1,13 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
+            <NavLink class="nav-link" href="singleplayer">Singleplayer</NavLink>
+            <NavLink class="nav-link" href="multiplayer">Multiplayer</NavLink>
         </div>
 
         <article class="content px-4">
