Created card component

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using SantaseCardGame.Client.Web
 @using SantaseCardGame.Client.Web.Shared
+@using SantaseCardGame.Data.Models
+@using SantaseCardGame.Infrastructure.States.Contracts
