--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
@@ -9,5 +9,6 @@
 @using Microsoft.JSInterop
 @using SantaseCardGame.Client.Web
 @using SantaseCardGame.Client.Web.Shared
+@using SantaseCardGame.Core.Engine.Contracts
 @using SantaseCardGame.Data.Models
 @using SantaseCardGame.Infrastructure.States.Contracts
