Added page for playing single game vs. AI

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
@@ -9,6 +9,7 @@
 @using Microsoft.JSInterop
 @using SantaseCardGame.Client.Web
 @using SantaseCardGame.Client.Web.Shared
+@using SantaseCardGame.Client.Web.Components
 @using SantaseCardGame.Core.Engine.Contracts
 @using SantaseCardGame.Data.Models
 @using SantaseCardGame.Infrastructure.States.Contracts
