Fixed bug when displaying trick cards

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/TrickComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/TrickComponent.razor
@@ -23,12 +23,12 @@
 
     protected override void OnInitialized()
     {
-        TrickState.OnDisplayTrick += DisplayTrick;
+        TrickState.OnDisplay += DisplayTrick;
     }
 
     public void Dispose()
     {
-        TrickState.OnDisplayTrick -= DisplayTrick;
+        TrickState.OnDisplay -= DisplayTrick;
     }
 
     private void DisplayTrick()
