--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Singleplayer.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Singleplayer.razor
@@ -19,6 +19,7 @@
     protected override void OnInitialized()
     {
         TrickState.OnDisplay += StateHasChanged;
+        TrickState.OnEnded += () => GameEngine.ManageGame(game);
 
         game = GameEngine.CreateGame(GameType.Singleplayer);
 
@@ -31,5 +32,6 @@
     public void Dispose()
     {
         TrickState.OnDisplay -= StateHasChanged;
+        TrickState.OnEnded -= () => GameEngine.ManageGame(game);
     }
 }
