Improved AI turn management and fixed bug when changing trump card

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Singleplayer.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Singleplayer.razor
@@ -26,7 +26,7 @@
         GameEngine.JoinGame(game.Id, "Bot");
         GameEngine.JoinGame(game.Id, "Player");
 
-        GameEngine.StartGame(game);
+        GameEngine.ManageGame(game);
     }
 
     public void Dispose()
