--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
@@ -22,6 +22,11 @@ else
     [Parameter]
     public Deck Deck { get; set; }
 
+    protected override void OnInitialized()
+    {
+        DeckState.OnExchangeTrumpCardForNineOfTrumps += ExchangeTrumpCardForNineOfTrumps;
+    }
+
     public void Dispose()
     {
         DeckState.OnExchangeTrumpCardForNineOfTrumps -= ExchangeTrumpCardForNineOfTrumps;
