Added some styles

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
@@ -2,21 +2,23 @@
 
 @inject IDeckState DeckState;
 
-@if (Deck.Cards.Any())
-{
-    <CardComponent Card="Deck.TrumpCard" PlayerActionType="PlayerActionType.ChangeTrumpCard" OnClick="DeckState.ChangeTrumpCard"></CardComponent>
+<div id="Deck">
+    @if (Deck.Cards.Any())
+    {
+        <CardComponent Card="Deck.TrumpCard" PlayerActionType="PlayerActionType.ChangeTrumpCard" OnClick="DeckState.ChangeTrumpCard"></CardComponent>
 
-    <div id="DeckCards" class="deck-component" @onclick="DeckState.CloseDeck">
-        <div id="DeckCardsCount">@(Deck.Cards.Count())</div>
-        <img src="/images/cards/Back.png" id="DeckBackCard" alt="DeckBackCard" class="card-component" />
-    </div>
+        <div id="DeckCards" class="deck-component" @onclick="DeckState.CloseDeck">
+            <div id="DeckCardsCount">@(Deck.Cards.Count())</div>
+            <img src="/images/cards/Back.png" id="DeckBackCard" alt="DeckBackCard" class="card-component" />
+        </div>
 
-    <div id="ClosedDeck"></div>
-}
-else
-{
-    <div id="TrumpSuit"></div>
-}
+        <div id="ClosedDeck"></div>
+    }
+    else
+    {
+        <div id="TrumpSuit"></div>
+    }
+</div>
 
 @code {
     [Parameter]
