--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/_Imports.razor
@@ -11,5 +11,6 @@
 @using SantaseCardGame.Client.Web.Shared
 @using SantaseCardGame.Client.Web.Components
 @using SantaseCardGame.Core.Engine.Contracts
+@using SantaseCardGame.Core.Utils.Contracts
 @using SantaseCardGame.Data.Models
 @using SantaseCardGame.Infrastructure.States.Contracts
