--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/PlayerComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/PlayerComponent.razor
@@ -27,6 +27,8 @@
     }
 </div>
 
+<div class="message-component" id="Message-Player-@Player.Position"></div>
+
 @code {
     [Parameter]
     public Player Player { get; set; }
