Fixed bug when moving away from Singleplayer page

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Singleplayer.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Pages/Singleplayer.razor
@@ -1,5 +1,7 @@
 ﻿@page "/singleplayer"
 
+@implements IDisposable;
+
 @inject IJSRuntime JSRuntime;
 @inject IGameState GameState;
 @inject ITrickState TrickState;
