--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
@@ -4,7 +4,7 @@
 @inject IJSRuntime JSRuntime;
 
 <div id="Deck">
-    @if (Deck.Cards.Any())
+    @if (Deck != null && Deck.Cards.Any())
     {
         <CardComponent Card="Deck.TrumpCard" PlayerActionType="PlayerActionType.ChangeTrumpCard" OnClick="DeckState.ChangeTrumpCard"></CardComponent>
 
