Added logic for saving and loading games

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/RoundPointsComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/RoundPointsComponent.razor
@@ -12,7 +12,7 @@
     if (GetGameWinnerPoints(firstPlayer) >= GameState.GameWinPoints ||
         GetGameWinnerPoints(secondPlayer) >= GameState.GameWinPoints)
     {
-        <div id="GameWinner" class="rounds-info">
+        <div id="GameWinner" class="game-info">
             <table>
                 <thead>
                     <tr>
@@ -34,7 +34,7 @@
     }
     else
     {
-        <div id="Scoreboard" class="rounds-info">
+        <div id="Scoreboard" class="game-info">
             <table>
                 <thead>
                     <tr>
