--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
@@ -4,8 +4,8 @@
     <main>
         <div class="top-row px-4">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
-            <NavLink class="nav-link" href="singleplayer">Singleplayer</NavLink>
-            <NavLink class="nav-link" href="multiplayer">Multiplayer</NavLink>
+            <NavLink class="nav-link" href="singleplayer">New Game</NavLink>
+            <NavLink class="nav-link" href="loadgame">Load Game</NavLink>
         </div>
 
         <article class="content px-4">
