--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">Home</NavLink>
             <NavLink class="nav-link" href="singleplayer">New Game</NavLink>
             <NavLink class="nav-link" href="loadgame">Load Game</NavLink>
+            <NavLink class="nav-link" href="rules">Rules</NavLink>
         </div>
 
         <article class="content px-4">
