Improved some logics

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
@@ -65,8 +65,8 @@
 
     private void ExchangeTrumpCardForNineOfTrumps(Card nineOfTrumpsCard)
     {
-        Deck.RemoveCard(Deck.TrumpCard);
-        Deck.AddCard(nineOfTrumpsCard);
+        Deck.Cards.Remove(Deck.TrumpCard);
+        Deck.Cards.Add(nineOfTrumpsCard);
 
         StateHasChanged();
     }
