Fixed bug with missing TrumpCard when there are no more cards in the deck and the game goes into a second phase

--- a/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
+++ b/SantaseCardGame/Clients/SantaseCardGame.Client.Web/Components/DeckComponent.razor
@@ -68,6 +68,8 @@
         Deck.Cards.Remove(Deck.TrumpCard);
         Deck.Cards.Add(nineOfTrumpsCard);
 
+        Deck.TrumpCard = nineOfTrumpsCard;
+
         StateHasChanged();
     }
 }
